syntax = "proto3";
package kvstore;

option go_package = "kvstore/proto";

// Client-facing service
service KVStore {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc GetRingState(RingStateRequest) returns (RingStateResponse) {}
}

// Node-to-node service
service NodeInternal {
  rpc Replicate(ReplicateRequest) returns (ReplicateResponse) {}
  rpc SyncKeys(SyncRequest) returns (SyncResponse) {}
  rpc Heartbeat(Ping) returns (Pong) {}
  rpc GarbageCollect(GarbageCollectRequest) returns (GarbageCollectResponse) {}
}

message GetRequest {
  string key = 1;
  uint64 client_id = 2;
  uint64 request_id = 3;
}

message GetResponse {
  string value = 1;
  bool exists = 2;
  string error = 3;
  uint64 timestamp = 4;  // For conflict resolution
}

message PutRequest {
  string key = 1;
  string value = 2;
  uint64 client_id = 3;
  uint64 request_id = 4;
  uint64 timestamp = 5;  // For conflict resolution
}

message PutResponse {
  string old_value = 1;
  bool had_old_value = 2;
  string error = 3;
  uint64 old_timestamp = 4;  // Timestamp of the old value
}

// New messages for node-to-node communication
message ReplicateRequest {
  string key = 1;
  string value = 2;
  uint64 timestamp = 3;  // (node_id << 32) | logical_clock
}

message ReplicateResponse {
  bool success = 1;
  string error = 2;
}

message SyncRequest {
  map<string, uint64> key_timestamps = 1;
  map<string, uint64> tombstone_timestamps = 2;  // Track deletions
}

message SyncResponse {
  map<string, KeyValue> missing = 1;
  map<string, uint64> stale_tombstones = 2;  // For cleanup
}

message KeyValue {
  string value = 1;
  uint64 timestamp = 2;
  bool is_tombstone = 3;  // New field
  uint64 ttl = 4;         // Tombstone time-to-live (seconds)
}

message Ping {
  uint32 node_id = 1;
  uint64 timestamp = 2;
}

message Pong {
  uint32 node_id = 1;
  uint64 timestamp = 2;
  bool is_leader = 3;
}

message RingStateRequest {}

message RingStateResponse {
  uint64 version = 1;
  map<string, bool> nodes = 2;
  int64 updated_at = 3;
}